<resources>
    <string name="app_name">NFC Toolkit</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_desc">You can read various tags\' IDs, technologies, format and write plain texts and URLs to supported tags with NFC Toolkit. Are you ready to start?</string>
    <string name="read_a_tag">Read a tag</string>
    <string name="touch_on_a_tag">Please touch your device on a tag.</string>
    <string name="content">Content:</string>
    <string name="nfc_icon">NFC icon</string>
    <string name="write_to_a_tag">Write to a tag</string>
    <string name="detected_a_tag">Detected a tag!</string>
    <string name="tag_information_text">Tag information is shown below.</string>
    <string name="supported_tech">Supported Technologies</string>
    <string name="tag_id">Tag ID</string>
    <string name="unknown_id">Unknown ID</string>
    <string name="data_type">Data type</string>
    <string name="data_content">Data content</string>
    <string name="plain_text">Plain text</string>
    <string name="url" translatable="false">URL</string>
    <string name="format_the_tag">Format the tag</string>
    <string name="application">Application</string>
    <string name="write_to_the_tag">Write to the tag</string>
    <string name="actions">Actions</string>
    <string name="format_success">Tag successfully formatted</string>
    <string name="format_fail">Format failed</string>
    <string name="read_failed">Read failed</string>
    <string name="read_success">Tag successfully read</string>
    <string name="write_fail_too_large">Too large data</string>
    <string name="write_success">Data successfully written</string>
    <string name="write_fail_not_writable">Tag is not writable</string>
    <string name="write_fail">Write failed</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="nfc_not_available">NFC is not available on your device.</string>
    <string name="nfc_disabled">NFC is disabled on your device.</string>
</resources>